--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.6",
     "next-connect": "^0.12.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "8.18.0",
